    * Periodically send a keepalive gcode to keep the printer in PrusaLink mode
    * Support the set ready and cancel ready LCD menu toggle
    * Add gcodes that flag the state of a usb print for the printer statistics to get saved
    * Handle the new re-print LCD menu item
    * Add the initial support for the MMU
    * Add Power Panic support

0.7.2 (2023-10-11)
    * Add an automatic PrusaLink image builder script
    * Add multi-instance documentation
    * Telemetry improvement
    * Attempt to turn the RPi wifi power management off in the images

0.7.1rc1 (2023-08-10)
    * Fixed HTTP response status on HEAD request for non-existing files
    * Attribute ro renamed to read_only
    * Fix printer returning to READY instead of IDLE
    * Respect the X-Forwarded-Prefix header in Wizard
    * Add focus support for the v4l2 cameras
    * Add a multi-instance web waypoint, use a reverse proxy to navigate to the correct instances
    * Automatically redirect from the multi-instance waypoint if exactly one printer is configured
    * Fix missing error detail pages
    * Fix an error when dosconnecting from a cammera that failed to connect
    * Fix an intermittent error that was killing instances for like two years
    * Differentiate between multi instance printers by showing the printer number on the LCD screen
    * Static Web update
        - Fix behavior on SD card ejection
        - Add simple camera focus control if supported
        - Add default value for connect hostname
        - Update translations
        - Add tooltips for error status texts in telemetry
        - Add confirmation modal to overwrite a file by upload
        - Fix undefined printer states displaying
        - Hide zero temperatures in telemetry
        - Add support to be running behind the proxy
        - Fix folder deletion button
        - Fix prusa connect port handling in URL builder
    * Hold the STOPPED and FINISHED state for at least 11s