@@ -14,6 +14,7 @@
     * Handle the new re-print LCD menu item
     * Add the initial support for the MMU
     * Add Power Panic support
+    * Make ->Ready to recover dissapear sooner from the LCD
 
 0.7.2 (2023-10-11)
     * Add an automatic PrusaLink image builder script
